classDiagram
    namespace CaseAggregate {
        class Case {
            <<AggregateRoot>>
            +string slug
            +integer nextVersion
            +createDraft()
        }
    }
    namespace CaseVersionAggregate {
        class CaseVersion {
            <<AggregateRoot>>
            +integer version
            +string title
            +string whenToUse
            +datetime authoredAt
            +SubjectType subject
            +Resolution fallback
            +ConsolidationRegister consolidationRegister
            +CaseVersionState state
            +datetime releasedAt
            +ManifestEntry[] manifest
            +collectionPlan()
            +requiresEvaluationOf()
            +resolveOutcome()
            +placeHypothesis()
            +removeHypothesis()
            +updateDraft()
            +release()
            +discard()
        }
    }
    namespace HypothesisAggregate {
        class Hypothesis {
            <<AggregateRoot>>
            +string name
            +revise()
        }
    }
    namespace HypothesisRevisionAggregate {
        class HypothesisRevision {
            <<AggregateRoot>>
            +integer revision
            +string criterion
            +Concept[] collects
            +Resolution resolution
            +HypothesisRevisionState state
            +release()
        }
    }
    class CaseInputRequirement {
        <<ValueObject>>
        +string attribute
        +boolean required
    }
    class CaseSummary {
        <<ValueObject>>
        +CaseVersionState currentState
        +integer versionCount
        +datetime lastUpdated
        +string title
        +string whenToUse
        +integer releasedVersion
    }
    class CaseVersionState {
        <<Enumeration>>
        DRAFT
        RELEASED
    }
    class ConsolidationRegister {
        <<Enumeration>>
        FORMAL
        PLAIN
    }
    class HypothesisRevisionState {
        <<Enumeration>>
        DRAFT
        RELEASED
    }
    class ManifestEntry {
        <<ValueObject>>
        +integer position
    }
    class Referral {
        <<ValueObject>>
        +Action action
        +Recipient recipient
    }
    class Resolution {
        <<ValueObject>>
        +Outcome outcome
        +Referral referral
    }
    class Action {
        <<external: glossary>>
    }
    class Concept {
        <<external: glossary>>
    }
    class Outcome {
        <<external: glossary>>
    }
    class Recipient {
        <<external: glossary>>
    }
    class SubjectType {
        <<external: glossary>>
    }
    class Capability {
        <<external: integration>>
    }
    CaseInputRequirement "0..*" --> "1..*" Capability
    CaseVersion "0..*" --> "1" Case
    Hypothesis "0..*" --> "1" Case
    HypothesisRevision "0..*" --> "1" Hypothesis
    ManifestEntry "0..*" --> "1" HypothesisRevision
